Added the about page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,1 +1,17 @@
+#This is the index section
 index.main.callout=Bootstrap starter template
+
+#This is the about section
+navbar.about.text=About
+navbar.home.text=Home
+
+#This is the copy section
+copy.h1.text = Who we are
+copy.p.lead=We are a community of DevOps engineers who has the goal of helping organisations deliver business value \
+  faster, through technology, while having fun
+copy.project.lead.intro=I am an experienced leader in delivering Quality Software @ Speed. My main areas of expertise \
+  cover DevOps, Agile and lean transformations, technology leadership and continuous deployment. \
+  through technical excellence. I am comfortable in all aspects of IT methodology leadership, from Agile to Lean, to \
+  more pre-emptive methodologies such as UP and Waterfall. I have got a lon proven track of turning difficult \
+  projects into success stories and in re-gaining business trust in difficult situations.
+copy.viewdetails.button=View details >>
